# MarkdownEditor

./: .gitattributes  .gitignore  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.local.json
docs/: glossary.md  index.md  project_overview.md
docs/app-shell/: design.md  dev-notes.md  overview.md  spec.md  tasks.md  test-cases.md
docs/editor/: design.md  dev-notes.md  overview.md  spec.md  tasks.md  test-cases.md
docs/editor/code-highlight/: design.md  dev-notes.md  overview.md  spec.md  tasks.md  test-cases.md
docs/editor/core/: design.md  dev-notes.md  overview.md  spec.md  tasks.md  test-cases.md
docs/editor/live-preview/: design.md  dev-notes.md  overview.md  spec.md  tasks.md  test-cases.md
docs/editor/wikilink/: design.md  spec.md  (+4 more)
docs/file-explorer/: design.md  overview.md  spec.md  tasks.md  test-cases.md
docs/settings/: design.md  overview.md  spec.md  tasks.md  test-cases.md
issues/: index.md
issues/tickets/: BUG-001.md  BUG-002.md  BUG-003.md  BUG-004.md  BUG-005.md  BUG-006.md  BUG-007.md  BUG-008.md  BUG-009.md  BUG-010.md
scripts/: verify-build.bat
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  settings.rs  vault.rs
src/editor/: code-block.ts  index.ts  live-preview.ts  scratch.ts  table-preview.ts  theme.ts  wikilink.ts
src/explorer/: api.ts  explorer.css  file-ops.ts  index.ts
src/settings/: api.ts  index.ts  settings.css
src/shell/: sidebar.ts  titlebar.ts
src/styles/: app.css  nord.css
(+41 files in other folders)
